#+link:    compat-gh   https://github.com/emacs-compat/compat/issues/
#+options: toc:nil num:nil author:nil

* Development

- compat-31: New functions =oddp= and =evenp=.
- compat-31: New functions =minusp= and =plusp=.
- compat-31: New macros =incf= and =decf=.
- compat-31: New function =color-blend=.
- compat-31: New function =completion-table-with-metadata=.
- compat-31: New macro =with-work-buffer=.
- Drop support for Emacs 24.x. Emacs 25.1 is required now. In case
  Emacs 24.x support is still needed, Compat 30 can be used.

* Release of "Compat" Version 30.0.2.0

- compat-30: Rename =trusted-files= to =trusted-content=.

(Release <2025-01-04 Sat>)

* Release of "Compat" Version 30.0.1.0

- compat-30: New variable =untrusted-content=.
- compat-30: New variable =trusted-files=.
- compat-30: New function =trusted-content-p=.

(Release <2024-12-15 Sun>)

* Release of "Compat" Version 30.0.0.0

- compat-28: Mark =subr-native-elisp-p= as obsolete (renamed in Emacs 30).
- compat-30: New function =char-to-name=.
- compat-30: New function =obarray-clear=.
- compat-30: New function =interpreted-function-p=.
- compat-30: New function =primitive-function-p=.
- compat-30: New function =closurep=.
- compat-30: Add extended function =sort= with keyword arguments.
- compat-30: New function =value<=.
- compat-30: Add extended =copy-tree= with support for copying records with
  non-nil optional second argument.
- compat-30: New macro =static-if=.
- compat-30: New alias =drop=.
- compat-30: New function =merge-ordered-lists=.
- compat-30: New variables =completion-lazy-hilit= and =completion-lazy-hilit-fn=
  and new function =completion-lazy-hilit=.
- compat-30: New function =require-with-check=.
- compat-30: New functions =find-buffer= and =get-truename-buffer=.
- compat-30: Add extended =completion-metadata-get= with support for
  =completion-category-overrides= and =completion-extra-properties=.

(Release <2024-07-08 Mon>)

* Release of "Compat" Version 29.1.4.5
